ChangeLog
---------

2011-01-06 23:53 Juan José Gutiérrez de Quevedo <juanjo@gutierrezdequevedo.com>

* development restarted

* print a small message about which config file we are actually using. Some
people seem to have gotten confused about this...


2008-12-14 20:17 Juan José Gutiérrez de Quevedo <juanjo@gutierrezdequevedo.com>

* Implemented log rotation for filelogger. Sponsored by Damir Simunic of
http://edgeof.net

* Disable chunking extension, it interferes with hermes operation

* Updated email address... again


2008-08-30 21:35 Juan José Gutiérrez de Quevedo <juanjo@gutierrezdequevedo.com>

* Updated email address.


2007-11-28 19:54 Juan José Gutiérrez de Quevedo <juanjo@gutierrezdequevedo.com>

* Fixed some sqls


2007-11-20 19:14 Juan José Gutiérrez de Quevedo <juanjo@gutierrezdequevedo.com>

* Added a small feature sponsored by http://www.pixelkinder.com. It allows to 
specify a list of valid ips for each domain, if a mail comes from an ip not on 
the list, then reject it.


2007-10-02 11:33 Juan José Gutiérrez de Quevedo <juanjo@gutierrezdequevedo.com>

* Add blacklisting based on the "to" address and domain. Useful to migrate
sites and to correct MTAs errors.


2007-07-20 20:03 Juan José Gutiérrez de Quevedo <juanjo@gutierrezdequevedo.com>

* 1.6 release

* Bugs:

* Fixed a DoS-causing, remotely explitable bug in Proxy.cpp. This bug only affects version 1.3 to
1.5, both inclusive. If you are using either 1.3, 1.4 or 1.5 UPDATE NOW.
Thanks to Veit Wahlich for finding and reporting the bug and for submitting
a preeliminar patch.

* While looking for similar vulnerabilities in the code, found a small
incorrection, although it doesn't have security implications.


2007-07-19 12:57 Juan José Gutiérrez de Quevedo <juanjo@gutierrezdequevedo.com>

* 1.5 release

* Enhancements:

* Allow permanently rejecting mails with dnsbl or spf errors. To use configure
return_temp_error_on_reject as false (default). To keep the old behaviour,